# mongo-etls

./: .drone.yml  .gitignore  .repo-root  README.md  ci.sh  dag_pkg  entry.py  pyproject.toml  requirements-dev.txt  requirements-external.txt  requirements-mars.txt  requirements.txt  setup.cfg  todo.md
atlas-app/: realm_config.json
atlas-app/data_sources/mongodb-atlas/: config.json
dag_script/performance_pipeline/: __init__.py
deployment/: prod.yml  staging.yml  values.yml
docker-images/presto/: Dockerfile  run_presto.py
docker-images/presto/example/: helloworld-presto-task.yml
docs/: policies.md  tech_design.md
src/: task_helpers.py  whereami.py
src/cli/: docs.py  generate.py
src/etls/: index.md
src/etls/performance_normalize/: change_points_create_view.sql  index.md
src/jobs/: dag_helper.py  helpers.py  index.md  job_parser.py  model.py  parser.py  variable.py  whereami.py
src/jobs/dev_prod/: __init__.py
src/jobs/dev_prod/archive_legacy_performance_data/: performance__long_history__points__raw.sql  performance__perf__build_failures__raw.sql  performance__perf__change_points__raw.sql  performance__perf__change_points_with_attachments__raw.sql  performance__perf__configuration__raw.sql  performance__perf__mute_outliers__raw.sql  performance__perf__outliers__raw.sql  performance__perf__points__raw.sql  performance__perf__processed_change_points__raw.sql  performance__perf__unprocessed_change_points__raw.sql  performance__perf__whitelisted_outlier_tasks__raw.sql
src/jobs/dev_prod/materialize_build_baron/: __mars__.py  structure.yml
src/jobs/dev_prod/materialize_daily_test_stats/: __mars__.py  job_config.jinja.json
src/jobs/dev_prod/materialize_historical_test_data/: __mars__.py  job_config.jinja.json
src/jobs/dev_prod/materialize_large_cedar/: __mars__.py
src/jobs/dev_prod/materialize_patch_build_optimizer/: __mars__.py  structure.yml
src/jobs/dev_prod/materialize_performance/: __mars__.py  structure.yml
src/jobs/dev_prod/materialize_performance_and_cedar/: __mars__.py  structure.yml
src/jobs/events_normalize/: index.md
src/jobs/materialize_build_baron/: __mars__.py
src/jobs/materialize_large_cedar/: __mars__.py  structure.yml
src/jobs/materialize_patch_build_optimizer/: __mars__.py  structure.yml
src/jobs/materialize_performance_and_cedar/: __mars__.py  generate.py  perf_results.sql  perf_results_unrolled.sql  structure.yml  time_series.sql  time_series_unrolled.sql
src/jobs/materialize_tpm_build_failures/: __mars__.py  structure.yml
src/jobs/peformance_pipeline/: __init__.py
src/jobs/performance_pipeline/: __init__.py  __mars__.py
tests/: mars_entry_point.py  test_mars_entry_points.py  test_parser.py
(+100 files in other folders)
