[tool.poetry]
name = "mongo-etls"
version = "0.0.0"
description = "Dev-prod ETLs and MARS jobs"
authors = ["Ryan Timmons <ryan.timmons@mongodb.com>"]
packages = [{include = "jobs", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
mars-util = "^0.7.16"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "mongodb"
url = "https://pypi.mongodb.name"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
